--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <title>Fatih YOLCU - Index</title>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
