--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>İletişim</h2>
+          <h2>Contact</h2>
         </div>
 
         <div class="row mt-1">
@@ -268,19 +268,19 @@
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
-                <h4>Yer:</h4>
-                <p>Kucukcekmece</p>
+                <h4>Location:</h4>
+                <p>Kucukcekmece, Turkey</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
-                <h4>E-Mesaj:</h4>
+                <h4>E-Mail:</h4>
                 <p>foksord@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Telefon:</h4>
+                <h4>Phone:</h4>
                 <p>+90 545 817 5996</p>
               </div>
 
