--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
       <h1>Fatih YOLCU</h1>
       <p>I'm <span class="typed" 
         data-typed-items="Full Stack Developer,
+                          Cloud Development,
+                          Micro Service Development,
+                          Web Server Development,
                           Mobile Application Development, 
-                          Desktop Application Development,
                           Tablet Application Development,
                           Watch Application Development,
                           TV Application Development,
                           Browser Application Development,
-                          Web Server Development,              
+                          Desktop Application Development,
+                          IDE Extension Developent,
+                          Browser Extension Developent,              
                           for 10 years."></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
