--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Fatih YOLCU</h1>
       <p>I'm <span class="typed" 
-        data-typed-items="Full Stack Developer,
-                          Cloud Development,
-                          Micro Service Development,
-                          Web Server Development,
-                          Mobile Application Development, 
-                          Tablet Application Development,
-                          Watch Application Development,
-                          TV Application Development,
-                          Browser Application Development,
-                          Desktop Application Development,
-                          IDE Extension Developent,
-                          Browser Extension Developent,              
-                          for 10 years."></span></p>
+        data-typed-items="Junior Full Stack Developer.,
+                          Cloud Developer.,
+                          Micro Service Developer.,
+                          Web Server Developer.,
+                          Mobile Application Developer., 
+                          Tablet Application Developer.,
+                          Watch Application Developer.,
+                          TV Application Developer.,
+                          Browser Application Developer.,
+                          Desktop Application Developer.,
+                          IDE Extension Developer.,
+                          Browser Extension Developer.,              
+                          for 10 years and Hero :D"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
