--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                           Desktop Application Developer.,
                           IDE Extension Developer.,
                           Browser Extension Developer.,              
-                          for 10 years,
-                          Hero :D"></span></p>
+                          for 10 years.,
+                          hero :D"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
