--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Fatih YOLCU</h1>
       <p>I'm <span class="typed" 
-        data-typed-items="Junior Full Stack Developer.,           
+        data-typed-items="Junior Developer.,           
                           for 10 years.,
                           hero :D"></span></p>
       <div class="social-links">
@@ -111,7 +111,6 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Junior</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-Mail:</strong> foksord@gmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available (Contact)</li>
                 </ul>
               </div>
             </div>
