--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <p> Software Language </p>
           <br/>
-          <p> C#, Java, JS(ES5, ES6, TS, ES), C/C++, Swift, ObjC, Python, PHP </p>
+          <p> C#, Java, JS, C/C++/ObjC, Swift, Python, PHP </p>
 
         </div>
 
