--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Fatih YOLCU</h1>
       <p>I'm <span class="typed" 
-        data-typed-items="Junior Developer.,           
+        data-typed-items="Amateur Developer.,           
                           for 10 years.,
                           hero :D"></span></p>
       <div class="social-links">
